Add postprocessing extension point

--- a/plugins/kotlin/j2k/shared/resources/messages/KotlinNJ2KBundle.properties
+++ b/plugins/kotlin/j2k/shared/resources/messages/KotlinNJ2KBundle.properties
@@ -4,3 +4,7 @@ progress.searching.usages.to.update=Searching usages to update\u2026
 
 phase.converting.j2k=Converting Java code to Kotlin code
 j2k.applying.conversions=Applying conversions\u2026
+
+j2k.custom.preprocessing=Running custom preprocessors
+j2k.custom.postprocessing=Running custom postprocessors
+j2k.custom.extensions.progress=Running processor {0} ({1,number,#}/{2,number,#})
